outsourced grunt plugin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-size-export",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Export your image informations into json. Provide your own handlebars template to export to any format and file structure you need.",
   "main": "index.js",
   "dependencies": {
@@ -23,17 +23,12 @@
     "images",
     "image",
     "size",
-    "image",
-    "dimensions",
-    "image",
-    "export",
-    "image",
+    "image dimensions",
+    "image export",
     "dimensions",
     "size",
-    "image",
-    "width",
-    "image",
-    "height",
+    "image width",
+    "image height",
     "width",
     "height"
   ],
